[gd_scene load_steps=2 format=3 uid="uid://d3jotq4t4n7t8"]

[ext_resource type="Script" uid="uid://b1ytcsgjpj0qk" path="res://example/views/main.gd" id="1_v6ajm"]

[node name="Main" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_v6ajm")

[node name="MobGameButton" type="Button" parent="."]
layout_mode = 2
text = "开始怪物游戏"

[node name="PlatformJumpButton" type="Button" parent="."]
layout_mode = 2
text = "开始平台跳跃游戏"

[node name="TextButton" type="Button" parent="."]
layout_mode = 2
text = "开始文本编辑"

[connection signal="pressed" from="MobGameButton" to="." method="_on_mob_game_button_pressed"]
[connection signal="pressed" from="PlatformJumpButton" to="." method="_on_platform_jump_button_pressed"]
[connection signal="pressed" from="TextButton" to="." method="_on_text_button_pressed"]
